@@ -55,11 +55,25 @@ typedef int (*_Shisa_db_enumerate_principals) (Shisa *dbh,
 					       const char *realm,
 					       char ***principals,
 					       size_t *nprincipals);
+typedef int (*_Shisa_db_realm_add) (Shisa * dbh,
+				    void *state,
+				    const char *realm);
+typedef int (*_Shisa_db_realm_remove) (Shisa * dbh,
+				       void *state,
+				       const char *realm);
 typedef int (*_Shisa_db_principal_find) (Shisa * dbh,
 					 void *state,
 					 const char *client,
 					 const char *realm,
 					 Shisa_principal **ph);
+typedef int (*_Shisa_db_principal_add) (Shisa * dbh,
+					void *state,
+					const Shisa_principal * ph,
+					const Shisa_key * key);
+typedef int (*_Shisa_db_principal_remove) (Shisa * dbh,
+					   void *state,
+					   const char *realm,
+					   const char *principal);
 typedef void (*_Shisa_db_done) (Shisa *dbh, void *state);
 
 struct _Shisa_backend
@@ -68,7 +82,11 @@ struct _Shisa_backend
   _Shisa_db_init init;
   _Shisa_db_enumerate_realms enumerate_realms;
   _Shisa_db_enumerate_principals enumerate_principals;
+  _Shisa_db_realm_add realm_add;
+  _Shisa_db_realm_remove realm_remove;
   _Shisa_db_principal_find principal_find;
+  _Shisa_db_principal_add principal_add;
+  _Shisa_db_principal_remove principal_remove;
   _Shisa_db_done done;
 };
 typedef struct _Shisa_backend _Shisa_backend;
@@ -105,11 +123,25 @@ extern int shisa_file_enumerate_principals (Shisa *dbh,
 					    const char *realm,
 					    char ***principals,
 					    size_t *nprincipals);
+extern int shisa_file_realm_add (Shisa * dbh,
+				 void *state,
+				 const char *realm);
+extern int shisa_file_realm_remove (Shisa * dbh,
+				    void *state,
+				    const char *realm);
 extern int shisa_file_principal_find (Shisa * dbh,
 				      void *state,
 				      const char *client,
 				      const char *realm,
 				      Shisa_principal **ph);
+extern int shisa_file_principal_add (Shisa * dbh,
+				     void *state,
+				     const Shisa_principal * ph,
+				     const Shisa_key * key);
+extern int shisa_file_principal_remove (Shisa * dbh,
+					void *state,
+					const char *realm,
+					const char *principal);
 extern void shisa_file_done (Shisa *dbh, void *state);
 
 #endif /* _INTERNAL_H */
