@@ -9,8 +9,10 @@ Shisa is used by Kerberos 5 servers (KDCs) to find information about
 principals.  It will be extended to support various backends, such as
 LDAP and SQL databases, but currently only text file databases are
 supported.  Shisa consists of two parts, a library (libshisa, see db/)
-and a command line tool (shisa, see src/).  See the Administration
-Manual for more information.  This is very much work in progress.
+and a command line tool (shisa, see src/).  Shisa is designed to be
+concurrent write safe, i.e., multiple writers to the same database is
+permitted.  See the Administration Manual for more information.  This
+is very much work in progress.
 
 ** Improve behaviour with poorly synchronized clocks.
 Earlier newly acquired tickets were discarded if they were not yet
